Kubernetes-Manifests-file/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tetris-prod-ingress

spec:
  ingressClassName: nginx

  rules:

    - host: tetris-prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tetris-service
                port:
                  number: 80
